tests/baselines/reference/allowSyntheticDefaultImports8.errors.txt
tests/cases/compiler/a.ts(1,10): error TS2305: Module '"./b"' has no exported member 'default'.


==== tests/cases/compiler/b.d.ts (0 errors) ====
    export function foo();
    
    export function bar();
    
==== tests/cases/compiler/a.ts (1 errors) ====
    import { default as Foo } from "./b";
             ~~~~~~~
!!! error TS2305: Module '"./b"' has no exported member 'default'.
    Foo.bar();
    Foo.foo();